--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,21 +21,21 @@ http {
         
         # 前端
         location / {
-            proxy_pass http://frontend\;
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
         
         # Python API
         location /api/ {
-            proxy_pass http://python_backend/\;
+            proxy_pass http://python_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
         
         # Go API  
         location /fabric-api/ {
-            proxy_pass http://go_backend/\;
+            proxy_pass http://go_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
