删除多余文件

--- a/backend-python/requirements.txt
+++ b/backend-python/requirements.txt
@@ -7,6 +7,7 @@ pydantic-settings==2.0.3
 # 数据库
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
+pymysql==1.1.0
 motor==3.3.2
 pymongo==4.6.3
 
@@ -18,10 +19,16 @@ python-jose[cryptography]==3.4.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.19
 PyJWT==2.8.0
+bcrypt==4.0.1
 
 # HTTP客户端
 httpx==0.25.2
 aiohttp==3.10.11
+
+# 数据处理
+pandas==2.0.3
+numpy==1.24.3
+openpyxl==3.1.2
 
 # 工具库
 python-dotenv==1.0.0
